[gd_scene load_steps=2 format=3 uid="uid://i3to2f6oeh1n"]

[ext_resource type="Script" uid="uid://d4l3yl0h6ix1t" path="res://src/scenes/UI/GameUI/WinScreen/WinScreen.gd" id="1_56vga"]

[node name="WinScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_56vga")

[node name="Modal" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchor_left = 0.3
anchor_top = 0.45
anchor_right = 0.7
anchor_bottom = 0.55
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Modal"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Modal"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
offset_left = -75.0
offset_top = 20.0
offset_right = 75.0
offset_bottom = 17.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 18
text = "Balance was Delivered!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Modal"]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -23.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 60
alignment = 1

[node name="NextLevelButton" type="Button" parent="Modal/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
text = "Next Level"

[node name="MainMenuButton" type="Button" parent="Modal/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
text = "Main Menu"

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="pressed" from="Modal/HBoxContainer/NextLevelButton" to="." method="_on_next_level_button_pressed"]
[connection signal="pressed" from="Modal/HBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
